FEAT: order submitted logic to prevent repeat submissions and NaN errors plus improve UI with order submitted message

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <input type="email" id="email" name="email" required>
       </fieldset>
       <p>Total Price: <span id="totalPrice">€0</span></p>
-      <button type="submit">Submit Order</button>
+      <button id="submitButton" type="submit">Submit Order</button>
     </form>
   </main>
   <footer>
