FEAT: add new order button logic

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       </fieldset>
       <p>Total Price: <span id="totalPrice">€0</span></p>
       <button id="submitButton" type="submit">Submit Order</button>
+      <button id="newOrderButton" type="button" class="hiddenButton">New Order</button>
     </form>
   </main>
   <footer>
